# siumai

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  release.yml
docs/: convenience_api.md  gemini_OPENAPI3_0.json  openai-compliance-fix-plan.md  openai-compliance-summary.md  openai-implementation-guide.md  openai-implementation-summary.md  openai-testing-plan.md
examples/: README.md  anthropic_models_example.rs  basic_usage.rs  convenience_methods.rs  gemini_basic_usage.rs  gemini_files_api.rs  gemini_thinking.rs  gemini_thinking_improved.rs  model_name_test.rs  new_api_demo.rs  ollama_advanced.rs  ollama_example.rs  openai_api_usage.rs  openai_audio_enhanced.rs  openai_compatible_models.rs  openai_enhanced_features.rs  openai_files_api.rs  openai_images_enhanced.rs  openai_models_enhanced.rs  openai_moderation_api.rs  siumai_interface.rs  test_fixes.rs  test_unified_tracing.rs  thinking_demo.rs  unified_interface_demo.rs  url_compatibility_test.rs
examples/01_getting_started/: README.md  basic_usage.rs  convenience_methods.rs  provider_comparison.rs  quick_start.rs
examples/02_core_features/: README.md  capability_detection.rs  chat_basics.rs  embedding.rs  embedding_unified.rs  error_handling.rs  parameter_mapping.rs  response_cache.rs  streaming_chat.rs  unified_interface.rs
examples/03_advanced_features/: README.md  batch_processing.rs  custom_configurations.rs  custom_provider.rs  multimodal_processing.rs  thinking_content_processing.rs  thinking_models.rs  tracing_monitoring.rs
examples/04_providers/anthropic/: README.md  basic_chat.rs  thinking_showcase.rs
examples/04_providers/google/: README.md  basic_usage.rs
examples/04_providers/ollama/: README.md  basic_setup.rs  thinking_and_tools.rs
examples/04_providers/openai/: README.md  basic_chat.rs  enhanced_features.rs  openai_response_api_http_mcp_client.rs  openai_responses_api.rs  vision_processing.rs
examples/04_providers/openai_compatible/: README.md  models_showcase.rs
examples/05_use_cases/: README.md  api_integration.rs  code_assistant.rs  content_generator.rs  simple_chatbot.rs
examples/06_advanced/: concurrent_usage.rs
examples/06_mcp_integration/: README.md  http_mcp_client.rs  http_mcp_server.rs  stdio_mcp_client.rs  stdio_mcp_server.rs
scripts/: README.md  run_integration_tests.bat  run_integration_tests.sh  test_ollama.bat  test_ollama.sh
src/: benchmarks.rs  builder.rs  client.rs  embedding.rs  error.rs  error_handling.rs  lib.rs  multimodal.rs  performance.rs  provider.rs  provider_features.rs  request_factory.rs  retry.rs  retry_backoff.rs  retry_strategy.rs  siumai.rs  stream.rs  traits.rs  types.rs  web_search.rs
src/custom_provider/: guide.rs  mod.rs
src/params/: anthropic.rs  common.rs  gemini.rs  mapper.rs  mod.rs  ollama.rs  openai.rs  validator.rs
src/providers/: mod.rs  test_provider.rs
src/providers/anthropic/: cache.rs  chat.rs  client.rs  mod.rs  model_constants.rs  models.rs  request.rs  streaming.rs  thinking.rs  types.rs  utils.rs
src/providers/gemini/: chat.rs  client.rs  code_execution.rs  embeddings.rs  files.rs  mod.rs  model_constants.rs  models.rs  request.rs  streaming.rs  types.rs
src/providers/groq/: api.rs  audio.rs  builder.rs  chat.rs  client.rs  config.rs  files.rs  mod.rs  models.rs  streaming.rs  tests.rs  types.rs  utils.rs
src/providers/ollama/: chat.rs  client.rs  completion.rs  config.rs  embeddings.rs  mod.rs  model_constants.rs  models.rs  streaming.rs  types.rs  utils.rs
src/providers/openai/: audio.rs  builder.rs  chat.rs  client.rs  config.rs  embeddings.rs  files.rs  images.rs  mod.rs  model_constants.rs  models.rs  moderation.rs  request.rs  responses.rs  streaming.rs  structured_output.rs  thinking_utils_test.rs  types.rs  utils.rs
src/providers/openai_compatible/: builder.rs  config.rs  mod.rs  models.rs
src/providers/openai_compatible/providers/: mod.rs  models.rs
src/providers/xai/: api.rs  builder.rs  chat.rs  client.rs  config.rs  mod.rs  models.rs  streaming.rs  types.rs  utils.rs
src/tracing/: config.rs  events.rs  http.rs  llm.rs  mod.rs  performance.rs  subscriber.rs
src/types/: audio.rs  chat.rs  common.rs  completion.rs  embedding.rs  files.rs  image.rs  models.rs  moderation.rs  streaming.rs  tools.rs  web_search.rs
src/utils/: error_handling.rs  http_headers.rs  mod.rs  sse_stream.rs  streaming.rs  url.rs  utf8_decoder.rs
tests/: README.md  audio_capability_test.rs  clone_support_test.rs  concurrency_tests.rs  config_validation_tests.rs  embedding_integration_tests.rs  gemini_thinking_test.rs  integration_tests.rs  max_tokens_default_test.rs  mock_framework.rs  network_error_tests.rs  parameter_advanced_tests.rs  parameter_internal_verification_test.rs  parameter_mapping_consistency.rs  parameter_validation_test.rs  provider_headers_test.rs  provider_interface_test.rs  real_llm_integration_test.rs  request_builder_consistency.rs  request_builder_integration_test.rs  resource_management_tests.rs  simple_utf8_test.rs  simple_validation_test.rs  siumai_parameter_passing_test.rs  siumai_unified_interface_test.rs  sse_multi_event_test.rs  stream_end_test.rs  streaming_integration_test.rs  tool_call_streaming_integration_test.rs  tool_capability_test.rs  unified_reasoning_test.rs  url_compatibility_test.rs  utf8_integration_test.rs  utf8_streaming_test.rs  validation_integration_tests.rs  vision_capability_test.rs
